; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-alpine-msi.c_alpine_msix_free_sgi.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-alpine-msi.c_alpine_msix_free_sgi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.alpine_msix_data = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.alpine_msix_data*, i32, i32)* @alpine_msix_free_sgi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alpine_msix_free_sgi(%struct.alpine_msix_data* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.alpine_msix_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.alpine_msix_data* %0, %struct.alpine_msix_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load %struct.alpine_msix_data*, %struct.alpine_msix_data** %4, align 8
  %10 = getelementptr inbounds %struct.alpine_msix_data, %struct.alpine_msix_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sub i32 %8, %11
  store i32 %12, i32* %7, align 4
  %13 = load %struct.alpine_msix_data*, %struct.alpine_msix_data** %4, align 8
  %14 = getelementptr inbounds %struct.alpine_msix_data, %struct.alpine_msix_data* %13, i32 0, i32 1
  %15 = call i32 @spin_lock(i32* %14)
  %16 = load %struct.alpine_msix_data*, %struct.alpine_msix_data** %4, align 8
  %17 = getelementptr inbounds %struct.alpine_msix_data, %struct.alpine_msix_data* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @bitmap_clear(i32 %18, i32 %19, i32 %20)
  %22 = load %struct.alpine_msix_data*, %struct.alpine_msix_data** %4, align 8
  %23 = getelementptr inbounds %struct.alpine_msix_data, %struct.alpine_msix_data* %22, i32 0, i32 1
  %24 = call i32 @spin_unlock(i32* %23)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @bitmap_clear(i32, i32, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
